src/styles/atoms/_pa_head-label.scss
// =========================| Atom: Head label |========================= //



.pa-head-label {

  //--------------------------| Variables

  $offset: #{get-page-offset()}vw;
  $label-size-min: $roles-size-menu-item;
  $label-size-max: $label-size-min * 2;
  $text-color: map-get($reg-colors, 'silver');
  $font-face: map-get($roles-typo-font-families, 'system');
  $font-size: get-progressive-calc($label-size-min, $label-size-max);
  $link-color: map-get-deep($roles-col-links, 'dark', 'link');
  $link-color-hover: map-get-deep($roles-col-links, 'dark', 'hover');
  $link-color-active: map-get-deep($roles-col-links, 'dark', 'active');


  //--------------------------| Base

  @include font-smoothing();

  display: block;
  color: $text-color;
  background-color: map-get($roles-col-backgrounds, 'headline');


  //--------------------------| Text

  > .text {
    @include user-select(none);

    display: block;
    padding: .45em $offset;
    font-family: $font-face;
    font-size: $font-size;
    text-align: center;
  }

  //--------------------------| Link

  a {
    color: $link-color;
    border-bottom: 0;

    html:not(.mobile) & {
      &:hover {
        color: $link-color-hover;
      }
    }

    &:active {
      color: $link-color-active !important;
    }
  }


  //--------------------------| Integration

  .ut-ofs-section > & {
    margin: -1em -#{$offset} 1em;
  }


} // .pa-head-label

